--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+.login{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.login > .logo{
+  position: absolute;
+  top: 15px;
+  left: 10px;
+  color: white;
+  border: white 2px solid;
+  z-index: 3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login > .info-section{
+  height: 100%;
+  width: 30%;
+  background-color: rgb(3, 12, 14);
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.login > .image-section{
+  width: 70%;
+  height: 100vh;
+  background-color: black;
+  background-image: url('./images/pexels-diva-20153179.jpg');
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.login > .image-section::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.151);
+}
+
+.login > .image-section > .logo-container{
+  background-color: black;
+  background-image: url('./images/Modern\ Brain\ Tech\ Logo.png');
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+  width: 300px;
+}
+
+.login > .logo-container {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: black;
+  background-image: url('./images/Modern\ Brain\ Tech\ Logo.png');
+  background-position: center;
+  background-size: cover;
+  height: 90px;
+  width: 90px;
+}
+
+.login > .info-section > .code-section{
+  border: 3px dashed white;
+  max-width: fit-content;
+  align-self: center;
+  position: absolute;
+  bottom: 200px;
+
+}
+
+@media (max-width: 1100px) {
+  .login > .info-section{
+    width: 50%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .login > .image-section{
+    width: 50%;
+
+  }
+}
+
+@media (max-width: 680px) {
+  .login {
+    flex-direction: column;
+  }
+  .login > .image-section{
+    width: 100%;
+    height: 40%;
+  }
+
+  .login > .info-section{
+    width: 100%;
+    height: 60%;
+    background-color: rgb(0, 0, 0);
+  }
+
+  .login > .image-section > .logo-container{
+    height: 200px;
+    width: 200px;
+  }
+
+
+  .login > .info-section > .code-section{
+    bottom: 5px;
   }
 }
