--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,21 @@
   overflow: hidden;
 }
 
+.login .code-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid black;
+  padding: 20px;
+  margin-top: 20px;
+  background-color: white;
+}
+
+.login .qr-code {
+  margin-top: 10px;
+}
+
 
 .login > .logo{
   position: absolute;
