--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@
   width: 300px;
 }
 
+
 .login > .logo-container {
   position: absolute;
   left: 10px;
@@ -81,13 +82,91 @@
   max-width: fit-content;
   align-self: center;
   position: absolute;
-  bottom: 200px;
-
+  bottom: 50px;
+  background-color: aliceblue;
 }
 
 .video{
   width: 100%;
   height: 100%;
+}
+
+.main{
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  background-image: url('./images/pexels-diva-20153179.jpg');
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 80px;
+}
+
+.main > .image-section > .logo-container{
+  background-color: black;
+  background-image: url('./images/Modern\ Brain\ Tech\ Logo.png');
+  background-position: center;
+  background-size: cover;
+  height: 150px;
+  width: 150px;
+}
+
+.main > .logout{
+  border: 2px solid white;
+  color: white;
+  font-weight: bold;
+  background-color: rgb(255, 17, 17);
+}
+
+.main > .info-section{
+  background-color: black;
+  height: 250px;
+  width: 750px;
+  align-self: center;
+  justify-self: center;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mobile-auth{
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  background-image: url('./images/pexels-diva-20153179.jpg');
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.mobile-auth > .mobile-section{
+  background-color: black;
+  height: 250px;
+  width: 95%;
+  align-self: center;
+  justify-self: center;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mobile-auth > .not-mobile-section{
+  background-color: black;
+  height: 250px;
+  width: 750px;
+  align-self: center;
+  justify-self: center;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 1100px) {
@@ -98,6 +177,10 @@
   .login > .image-section{
     width: 50%;
 
+  }
+
+  .main > .info-section{
+    width: 98%;
   }
 }
 
